Alteration in container and footer text

--- a/index.html
+++ b/index.html
@@ -221,9 +221,8 @@
                 <span>&#10084;</span>
             </div>
             <h3>Obrigadoss bobãooo</h3>
-            <small class="sm-2"
-                >Ti amoo muitãozãoziss by Leonardo Marques</small
-            >
+            <small class="sm-2">Ti amoo muitãozãoziss by Leonardo Marques</small
+            ><br /><br />
             <div class="hearts-container">
                 <span>&#10084;</span>
                 <span>&#10084;</span>
